# Anchsx2

./: CMakeLists.txt  ExportOptions.plist  FORK_SETUP.md  SETUP_COMPLETE.md
.github/: copilot-instructions.md
.github/workflows/: build-ios.yml
cmake/: ios.toolchain.cmake
docs/: LiveContainer_Guide.md  iOS_Build_Guide.md
pcsx2-ios/: BUILD_CONFIG.md  ContentView.swift  Info.plist  PCSX2Controller.swift  project.json
